--- a/Media/CameraApp/CameraApp.Android/Properties/AndroidManifest.xml
+++ b/Media/CameraApp/CameraApp.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="cz.radekzahradnik.CameraApp" android:installLocation="auto">
-	<uses-sdk android:minSdkVersion="26" />
-	<uses-permission android:name="android.permission.CAMERA" />
-	<application android:icon="@drawable/icon" android:label="XamarinCamera"></application>
+  <uses-sdk android:minSdkVersion="26" />
+  <uses-permission android:name="android.permission.CAMERA" />
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+  <application android:icon="@drawable/icon" android:label="XamarinCamera">
+    <provider android:name="android.support.v4.content.FileProvider"
+              android:authorities="cz.radekzahradnik.CameraApp.fileprovider"
+              android:exported="false"
+              android:grantUriPermissions="true">
+      <meta-data android:name="android.support.FILE_PROVIDER_PATHS"
+                 android:resource="@xml/file_paths"></meta-data>
+    </provider>
+  </application>
 </manifest>
