--- a/Media/CameraApp/CameraApp.Android/CameraApp.Android.csproj
+++ b/Media/CameraApp/CameraApp.Android/CameraApp.Android.csproj
@@ -78,6 +78,9 @@
     <PackageReference Include="Xamarin.Forms.Maps">
       <Version>2.5.0.280555</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.GooglePlayServices.Maps">
+      <Version>60.1142.0</Version>
+    </PackageReference>
     <PackageReference Include="ZXing.Net.Mobile">
       <Version>2.3.2</Version>
     </PackageReference>
